--- a/app/assets/tailwind.config.css
+++ b/app/assets/tailwind.config.css
@@ -15,25 +15,13 @@
   --color-bg-primary: #101011;
   --color-bg-secondary: #090909;
   --color-accent: #5e6ad2;
-  --color-info: #778DA9;
-  --color-bg-light: #E0E1DD;
+  --color-info: #778da9;
+  --color-bg-light: #e0e1dd;
   --color-item-hover-bg: #1a1a1a;
   --color-text-secondary: #999999;
 }
 
-html, body {
-  @apply bg-bg-primary;
-}
-
+html,
 body {
-  @apply text-text-base;
-  @apply text-base;
-
-  * {
-    @apply border-[#202020];
-  }
-}
-
-@layer components {
-  /* put component styles here */
+  @apply bg-white text-gray-900 text-base;
 }
