--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -8,6 +8,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-100: oklch(93.6% 0.032 17.717);
+    --color-red-200: oklch(88.5% 0.062 18.334);
     --color-red-300: oklch(80.8% 0.114 19.571);
     --color-red-400: oklch(70.4% 0.191 22.216);
     --color-red-500: oklch(63.7% 0.237 25.331);
@@ -281,6 +282,9 @@
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
@@ -452,9 +456,6 @@
   .bg-accent {
     background-color: var(--color-accent);
   }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
-  }
   .bg-bg-primary {
     background-color: var(--color-bg-primary);
   }
@@ -470,17 +471,11 @@
   .bg-blue-500 {
     background-color: var(--color-blue-500);
   }
-  .bg-fuchsia-800 {
-    background-color: var(--color-fuchsia-800);
-  }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
-  }
-  .bg-gray-200 {
-    background-color: var(--color-gray-200);
   }
   .bg-gray-400 {
     background-color: var(--color-gray-400);
@@ -488,23 +483,17 @@
   .bg-green-500 {
     background-color: var(--color-green-500);
   }
-  .bg-indigo-600 {
-    background-color: var(--color-indigo-600);
-  }
   .bg-inherit {
     background-color: inherit;
   }
   .bg-item-hover-bg {
     background-color: var(--color-item-hover-bg);
   }
-  .bg-lime-600 {
-    background-color: var(--color-lime-600);
-  }
   .bg-red-100 {
     background-color: var(--color-red-100);
   }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
+  .bg-red-200 {
+    background-color: var(--color-red-200);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -554,8 +543,17 @@
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
   }
+  .pl-12 {
+    padding-left: calc(var(--spacing) * 12);
+  }
+  .pl-16 {
+    padding-left: calc(var(--spacing) * 16);
+  }
   .pl-18 {
     padding-left: calc(var(--spacing) * 18);
+  }
+  .pl-24 {
+    padding-left: calc(var(--spacing) * 24);
   }
   .text-center {
     text-align: center;
