--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -600,6 +600,9 @@
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
   }
+  .pb-2 {
+    padding-bottom: calc(var(--spacing) * 2);
+  }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
   }
@@ -717,8 +720,14 @@
   .text-yellow-400 {
     color: var(--color-yellow-400);
   }
+  .lowercase {
+    text-transform: lowercase;
+  }
   .italic {
     font-style: italic;
+  }
+  .opacity-0 {
+    opacity: 0%;
   }
   .opacity-50 {
     opacity: 50%;
@@ -763,6 +772,13 @@
       }
     }
   }
+  .group-hover\/requestitem\:opacity-100 {
+    &:is(:where(.group\/requestitem):hover *) {
+      @media (hover: hover) {
+        opacity: 100%;
+      }
+    }
+  }
   .focus-within\:border-\[\#ffffff\] {
     &:focus-within {
       border-color: #ffffff;
@@ -791,6 +807,27 @@
     &:hover {
       @media (hover: hover) {
         background-color: #26658d;
+      }
+    }
+  }
+  .hover\:bg-\[\#202020\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #202020;
+      }
+    }
+  }
+  .hover\:bg-\[\#212529\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #212529;
+      }
+    }
+  }
+  .hover\:bg-\[\#303030\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #303030;
       }
     }
   }
