--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-200: oklch(88.5% 0.062 18.334);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-400: oklch(70.7% 0.022 261.325);
@@ -264,6 +265,9 @@
   .h-full {
     height: 100%;
   }
+  .\!w-auto {
+    width: auto !important;
+  }
   .w-0 {
     width: calc(var(--spacing) * 0);
   }
@@ -273,8 +277,20 @@
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
+  .w-18 {
+    width: calc(var(--spacing) * 18);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-24 {
+    width: calc(var(--spacing) * 24);
+  }
   .w-96 {
     width: calc(var(--spacing) * 96);
+  }
+  .w-\[35\%\] {
+    width: 35%;
   }
   .w-\[300px\] {
     width: 300px;
@@ -285,6 +301,15 @@
   .w-max {
     width: max-content;
   }
+  .max-w-24 {
+    max-width: calc(var(--spacing) * 24);
+  }
+  .max-w-\[500px\] {
+    max-width: 500px;
+  }
+  .min-w-24 {
+    min-width: calc(var(--spacing) * 24);
+  }
   .min-w-\[40\%\] {
     min-width: 40%;
   }
@@ -293,6 +318,9 @@
   }
   .min-w-\[180px\] {
     min-width: 180px;
+  }
+  .flex-\[35\%\] {
+    flex: 35%;
   }
   .flex-\[50\%\] {
     flex: 50%;
@@ -314,6 +342,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .appearance-none {
     appearance: none;
@@ -434,6 +465,9 @@
       background-color: color-mix(in oklab, var(--color-black) 40%, transparent);
     }
   }
+  .bg-red-200 {
+    background-color: var(--color-red-200);
+  }
   .bg-transparent {
     background-color: transparent;
   }
@@ -479,6 +513,9 @@
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
   .pl-18 {
     padding-left: calc(var(--spacing) * 18);
   }
@@ -518,6 +555,9 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-nowrap {
+    text-wrap: nowrap;
   }
   .text-\[\#1e7069\] {
     color: #1e7069;
@@ -581,6 +621,11 @@
   }
   .ring-black {
     --tw-ring-color: var(--color-black);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-transform {
     transition-property: transform, translate, scale, rotate;
