--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-700: oklch(37.3% 0.034 259.733);
@@ -281,6 +282,15 @@
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
+  .w-48 {
+    width: calc(var(--spacing) * 48);
+  }
+  .w-52 {
+    width: calc(var(--spacing) * 52);
+  }
+  .w-64 {
+    width: calc(var(--spacing) * 64);
+  }
   .w-96 {
     width: calc(var(--spacing) * 96);
   }
@@ -298,6 +308,9 @@
   }
   .max-w-\[500px\] {
     max-width: 500px;
+  }
+  .min-w-48 {
+    min-width: calc(var(--spacing) * 48);
   }
   .min-w-\[40\%\] {
     min-width: 40%;
@@ -362,6 +375,9 @@
   .overflow-y-auto {
     overflow-y: auto;
   }
+  .\!rounded-none {
+    border-radius: 0 !important;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
@@ -412,6 +428,15 @@
   .\!bg-\[\#5d5120\] {
     background-color: #5d5120 !important;
   }
+  .\!bg-\[\#f2c43d\] {
+    background-color: #f2c43d !important;
+  }
+  .\!bg-\[\#f2c43d\]\/10 {
+    background-color: color-mix(in oklab, #f2c43d 10%, transparent) !important;
+  }
+  .\!bg-red-500 {
+    background-color: var(--color-red-500) !important;
+  }
   .bg-\[\#0a0a0a\] {
     background-color: #0a0a0a;
   }
@@ -447,6 +472,9 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-black) 40%, transparent);
     }
+  }
+  .bg-red-500 {
+    background-color: var(--color-red-500);
   }
   .bg-transparent {
     background-color: transparent;
